# red-light-magicblock

./: .gitignore  Anchor.toml  Cargo.toml  package-lock.json  package.json  tsconfig.tsbuildinfo
app/: layout.tsx  page.tsx
app/components/: FinishLine.tsx  Game.tsx  MainMenu.tsx  PriceChart.tsx
app/hooks/: useSolPrice.ts
app/lib/: bolt-actions.ts  fetch-games.ts  program-ids.ts
docs/: ARCHITECTURE.md
patches/session-keys/: Cargo.toml
patches/session-keys/src/: lib.rs
programs-ecs/components/game-config/: Cargo.toml
programs-ecs/components/game-config/src/: lib.rs
programs-ecs/components/player-registry/: Cargo.toml
programs-ecs/components/player-registry/src/: lib.rs
programs-ecs/components/player-state/: Cargo.toml
programs-ecs/components/player-state/src/: lib.rs
programs-ecs/components/position/src/: lib.rs
programs-ecs/libs/shared/: Cargo.toml
programs-ecs/libs/shared/src/: lib.rs
programs-ecs/systems/check-price/: Cargo.toml
programs-ecs/systems/check-price/src/: lib.rs
programs-ecs/systems/end-game/: Cargo.toml
programs-ecs/systems/end-game/src/: lib.rs
programs-ecs/systems/init-game/: Cargo.toml
programs-ecs/systems/init-game/src/: lib.rs
programs-ecs/systems/move-player/: Cargo.toml
programs-ecs/systems/move-player/src/: lib.rs
programs-ecs/systems/spawn-player/: Cargo.toml
programs-ecs/systems/spawn-player/src/: lib.rs
programs-ecs/systems/start-game/: Cargo.toml
programs-ecs/systems/start-game/src/: lib.rs
