[package]
name = "move-player"
version = "0.2.4"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "move_player"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["bolt-lang/idl-build"]
anchor-debug = ["bolt-lang/anchor-debug"]
custom-heap = []
custom-panic = []


[dependencies]
bolt-lang.workspace = true
serde = { version = "1.0", features = ["derive"] }
game-config = { path = "../../components/game-config", features = ["cpi"] }
player-state = { path = "../../components/player-state", features = ["cpi"] }
player-registry = { path = "../../components/player-registry", features = ["cpi"] }
shared = { path = "../../libs/shared" }
